--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,20 +2,31 @@
   <nav class="navigation">
     <div class="container">
       <a>Kate Moore</a>
-      <ul class="nav-list">
-        <li class="nav-item">
-          <a class="nav-link">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn-contact">Contact Me</a>
-        </li>
-      </ul>
+      <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512"
+        (click)="openSidenav()">
+        <path
+          d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+      </svg>
+      <div class="sidenav" #sidenav (clickOutside)="closeSidenav()" skipClass="btn-menu">
+        <div class="sidenav-header">
+        </div>
+        <div class="sidenav-body">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn-contact">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </nav>
 </header>
