--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,9 @@
 :root {
   --primary-color: #e93314;
+  --primary-color-dark: #c32206;
   --text-color: #777;
+  --nav-link-color: rgba(0, 0, 0, 0.65);
+  --nav-link-hover-color: rgba(0, 0, 0, 0.8);
+  --sidenav-toggler-color:rgba(0, 0, 0, 0.65);
+  --sidenav-toggler-hover-color:rgba(0, 0, 0, 0.8);
 }
