--- a/styles/_media-queries.scss
+++ b/styles/_media-queries.scss
@@ -2,9 +2,12 @@
 //  MEDIA QUERIES
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 $breakpoints: (
-  sm: 768px,
-  md: 992px,
-  lg: 1200px
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
 );
 
 
