--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,38 +2,24 @@
   <nav class="navigation">
     <div class="container">
       <a>Kate Moore</a>
-      <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512" (click)="open()">
+      <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512"
+        (click)="openSidenav()">
         <path
           d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
       </svg>
-      <div class="sidenav" [ngClass]="{'show':isSidenavVisible,'hiding':isSidenavHiding}">
-        <div class="sidenav-header">
-          <h4 class="sidenav-title">Menu</h4>
-          <svg class="sidenav-close" xmlns="http://www.w3.org/2000/svg" height="1.25em" viewBox="0 0 384 512"
-            (click)="close()">
-            <path
-              d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z" />
-          </svg>
-        </div>
-        <div class="sidenav-body">
+      <div class="nav">
+        <div class="nav-body">
           <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn-contact">Contact Me</a>
+            <li class="nav-item" *ngFor="let item of navItems">
+              <a [href]="item.link" [className]="item.className">
+                {{ item.title }}
+              </a>
             </li>
           </ul>
         </div>
       </div>
-      <div class="sidenav-backdrop" [ngClass]="{'show':isSidenavVisible,'hiding':isSidenavHiding}" (click)="close()">
-      </div>
+      <div class="nav-backdrop" *ngIf="sidenavState === 'in'" (click)="closeSidenav()"></div>
     </div>
   </nav>
 </header>
+<app-sidenav [@slideInOut]="sidenavState" (onClose)="closeSidenav()"></app-sidenav>
