Create landing component

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,9 @@
 :root {
-  --primary-color: #e93314;
-  --primary-color-dark: #c32206;
-  --text-color: #777;
+  --primary-color: #7f00fd;
+  --primary-color-dark: #7200e4;
+  --secondary-color: #F1F5F9;
+  --text-color: #475569;
+  --heading-color: #334155;
   --nav-link-color: rgba(0, 0, 0, 0.65);
   --nav-link-hover-color: rgba(0, 0, 0, 0.8);
   --sidenav-toggler-color:rgba(0, 0, 0, 0.65);
