--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   color: var(--text-color);
+  font-size: 1.125rem;
 }
 
 h1,
@@ -15,11 +16,15 @@ h4,
 h5,
 h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
+  margin-bottom: 1.25rem;
   line-height: 1.2;
+  color: var(--heading-color);
+  font-weight: 600;
 }
 
+p {
+  margin: 0;
+}
 
 .container {
   margin-left: auto;
