Add logo and social icons

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,9 @@
 <header>
   <nav class="navigation">
     <div class="container">
-      <a>Kate Moore</a>
+      <a>
+        <img class="logo" src="./assets/img/logo.svg" alt="">
+      </a>
       <svg class="btn-menu" xmlns="http://www.w3.org/2000/svg" height="1.50em" viewBox="0 0 448 512"
         (click)="openSidenav()">
         <path
