--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,6 +6,8 @@
   --heading-color: #334155;
   --nav-link-color: rgba(0, 0, 0, 0.65);
   --nav-link-hover-color: rgba(0, 0, 0, 0.8);
-  --sidenav-toggler-color:rgba(0, 0, 0, 0.65);
-  --sidenav-toggler-hover-color:rgba(0, 0, 0, 0.8);
+  --sidenav-toggler-color: rgba(0, 0, 0, 0.65);
+  --sidenav-toggler-hover-color: rgba(0, 0, 0, 0.8);
+  --social-icon-color: #d8dbe1;
+  --social-icon-hover-color: #cccfd7;
 }
