--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<app-header id="landing"></app-header>
 <app-landing></app-landing>
-<app-about></app-about>
+<app-about id="about"></app-about>
