Create services component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header id="landing"></app-header>
 <app-landing></app-landing>
 <app-about id="about"></app-about>
+<app-services id="services"></app-services>
