Create scroll top component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-landing></app-landing>
 <app-about id="about"></app-about>
 <app-services id="services"></app-services>
+<app-scroll-top></app-scroll-top>
