Add sticky header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header appScroll toogleClass="sticky" [activateOn]="1">
   <nav class="navigation">
     <div class="container">
       <a>
