Create portfolio component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-landing></app-landing>
 <app-about id="about"></app-about>
 <app-services id="services"></app-services>
+<app-portfolio id="portfolio"></app-portfolio>
 <app-scroll-top></app-scroll-top>
