--- a/src/app/layouts/about/about.component.html
+++ b/src/app/layouts/about/about.component.html
@@ -1,19 +1,20 @@
-<section class="section">
+<section>
   <div class="container">
-    <div class="row">
-      <div class="desc-container">
-        <h2 class="title">About Me</h2>
+    <div class="about">
+      <div class="about-details">
+        <h2>About Me</h2>
         <h3 class="subtitle">An enthusiastic Web Developer based in California</h3>
         <p class="first-desc">I'm very passionate and dedicated to my work. With 5 years experience as a professional
-          web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy
-          every step of the design process, from discussion and collaboration.</p>
-        <p>I’ve spent most of these years working across different areas of design like front-end development, landing
-          pages and app UI/UX. Having worked on
+          web developer, I have acquired the skills and knowledge necessary to make your project a success. Having
+          worked on
           various projects that are already live, I can help you with the best possible suggestions and ideas that we
           can proceed with.</p>
+        <a href="/assets/img/about.png" download="proposed_file_name">
+          <button class="btn">Download CV</button>
+        </a>
       </div>
-      <div class="img-container">
-        <img class="about-img" src="/assets/img/about.png" alt="">
+      <div class="about-img">
+        <img src="/assets/img/about.png" alt="Kate Moore">
       </div>
     </div>
   </div>
