--- a/src/app/layouts/services/services.component.html
+++ b/src/app/layouts/services/services.component.html
@@ -1,31 +1,29 @@
-<section class="section">
+<section>
   <div class="container">
-    <div class="row section-title-container">
-      <div class="section-title-subcontainer">
-        <h2>What I Do</h2>
-        <p class="section-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, egestas. Id fermentum
-          nullam ipsum massa.</p>
-      </div>
+    <div class="services-title">
+      <h2>What I Do</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, egestas. Id fermentum
+        nullam ipsum massa.</p>
     </div>
-    <div class="row">
-      <div class="service-card">
-        <h3 class="service-subtitle">Web Development</h3>
-        <h3 class="service-title">Web Design & Logo</h3>
-        <p class="service-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+    <div class="services">
+      <div class="services-card">
+        <h3 class="services-card-subtitle">Web Development</h3>
+        <h3 class="services-card-title">Web Design & Logo</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
-      <div class="service-card">
-        <h3 class="service-subtitle">App Development</h3>
-        <h3 class="service-title">iOS & Android</h3>
-        <p class="service-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+      <div class="services-card">
+        <h3 class="services-card-subtitle">App Development</h3>
+        <h3 class="services-card-title">iOS & Android</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
-      <div class="service-card">
-        <h4 class="service-subtitle">Marketing</h4>
-        <h3 class="service-title">Digital Marketing</h3>
-        <p class="service-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+      <div class="services-card">
+        <h4 class="services-card-subtitle">Marketing</h4>
+        <h3 class="services-card-title">Digital Marketing</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
