--- a/src/app/layouts/about/about.component.scss
+++ b/src/app/layouts/about/about.component.scss
@@ -1,37 +1,27 @@
 @import './styles/_media-queries.scss';
 
-.section {
-  padding-top: 6.25rem;
-  padding-bottom: 6.25rem;
-}
-
-.row {
+.about {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+  row-gap: 3.125rem;
+  column-gap: 5rem;
 }
 
-.subtitle {
-  font-size: 1.25rem;
-  margin-top: -0.625rem;
-}
-
-.img-container {
+.about-details {
   display: flex;
   flex-direction: column;
-}
-
-.desc-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 3.125rem;
 }
 
 .about-img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.subtitle {
+  font-size: 1.125rem;
+  margin-top: -0.625rem;
 }
 
 .first-desc {
@@ -39,15 +29,16 @@
 }
 
 @include respond-above(md) {
-  .desc-container {
+  .about-details {
     flex: 1;
-    padding-left: 5rem;
     order: 2;
-    margin-bottom: 0;
   }
 
-  .img-container {
+  .about-img {
     flex: 0.7;
   }
 
+  .subtitle {
+    font-size: 1.25rem;
+  }
 }
