--- a/src/app/layouts/landing/landing.component.html
+++ b/src/app/layouts/landing/landing.component.html
@@ -1,15 +1,15 @@
-<section class="section">
+<section>
   <div class="container">
-    <div class="row">
-      <div class="details-container">
+    <div class="landing">
+      <div class="landing-details">
         <h3 class="profession">Web Developer</h3>
-        <h1 class="fullname">Kate Moore</h1>
+        <h1>Kate Moore</h1>
         <p class="description">I design and develop services for customers of all sizes,
           specializing in creating stylish, modern websites, web
           services and online stores.</p>
         <ul class="social-icons-container">
           <li>
-            <a href="#">
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
                   <path
@@ -19,7 +19,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
                   <path
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="https://github.com" target="_blank" rel="noopener noreferrer">
               <span class="social-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 496 512">
                   <path
@@ -40,8 +40,8 @@
           </li>
         </ul>
       </div>
-      <div class="img-container">
-        <img class="banner" src="/assets/img/banner.png" alt="">
+      <div class="landing-img">
+        <img src="/assets/img/banner.png" alt="Kate Moore">
       </div>
     </div>
   </div>
