--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import './styles/_variables.scss';
 
 html {
+  font-size: 100%;
   scroll-behavior: smooth;
 }
 
@@ -10,7 +11,11 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   color: var(--text-color);
-  font-size: 1.125rem;
+  font-size: 1rem;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1,
@@ -26,16 +31,29 @@ h6 {
   font-weight: 600;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
+
 h2 {
-  font-size: 1.875rem;
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 1.375rem;
+  font-size: 1.25rem;
 }
 
 p {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
@@ -46,9 +64,31 @@ p {
   width: 100%;
 }
 
+section {
+  margin-top: 6.25rem;
+}
+
 .row {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 0.875rem;
+  background-color: var(--primary-color);
+  border-radius: 50px;
+  padding: 0.625rem 1.5rem;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+  border: 0;
+
+  &:hover {
+    background-color: var(--primary-color-dark);
+  }
 }
 
 @include respond-above(sm) {
@@ -58,8 +98,32 @@ p {
 }
 
 @include respond-above(md) {
+  body {
+    font-size: 1.125rem;
+  }
+
   .container {
     max-width: 720px;
+  }
+
+  .btn {
+    font-size: 1rem;
+  }
+
+  h1 {
+    font-size: 3.125rem;
+  }
+
+  h2 {
+    font-size: 1.875rem;
+  }
+
+  h3 {
+    font-size: 1.375rem;
+  }
+
+  section {
+    margin-top: 7.5rem;
   }
 }
 
