Create resume component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-landing></app-landing>
 <app-about id="about"></app-about>
 <app-services id="services"></app-services>
+<app-resume id="resume"></app-resume>
 <app-portfolio id="portfolio"></app-portfolio>
 <app-scroll-top></app-scroll-top>
