--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-services id="services"></app-services>
 <app-resume id="resume"></app-resume>
 <app-portfolio id="portfolio"></app-portfolio>
+<app-testimonials></app-testimonials>
 <app-scroll-top></app-scroll-top>
