--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-resume id="resume"></app-resume>
 <app-portfolio id="portfolio"></app-portfolio>
 <app-testimonials></app-testimonials>
+<app-contacts id="contacts"></app-contacts>
 <app-scroll-top></app-scroll-top>
