Create footer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 <app-portfolio id="portfolio"></app-portfolio>
 <app-testimonials></app-testimonials>
 <app-contacts id="contacts"></app-contacts>
+<app-footer></app-footer>
 <app-scroll-top></app-scroll-top>
